[package]
name = "atomic_pubsub"
version = "0.1.0"
edition = "2021"

[features]
redis_adapter = ["redis"]

default = ["redis_adapter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["tls-native-tls"], optional = true }
